expected/main/mil/area-as-entrypoint-init-clash.err
ERROR: "actual/main/mil/area-as-entrypoint-init-clash.mil", line 7
external init :: Init (Stored (Bit 32))
         ^
External init is implemented by a primitive of the same name so cannot be declared as an entrypoint.

ERROR: Aborting after previously reported error

